# rusty-diesel-rocket

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/20170404185543_create_users/: up.sql
src/: db.rs  main.rs
src/controllers/: user.rs
src/models/: user.rs
templates/: index.html.hbs  login.html.hbs  register.html.hbs
